fix: rename blade view / enable paginator bootstrap class

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,6 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-@import './menu';
-@import './card';
-
+@import './front/menu';
+@import './front/card';
+@import './admin/index'
