--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10278,3 +10278,7 @@ textarea.form-control-lg {
 .card {
   height: 100%;
 }
+
+body .table-responsive > .table > a {
+  color: orange !important;
+}
